--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tasty_food_webapp
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.admin.username=admin
+spring.admin.password=admin
+
 spring.queries.users-query=select username, hashed_password from user where username=?
 spring.queries.roles-query=select role from user where username=?
 
