Add Registration view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.password=1234
 spring.admin.username=admin
 spring.admin.password=admin
 
+spring.http.encoding.enabled=false
+
 spring.queries.users-query=select username, hashed_password from user where username=?
 spring.queries.roles-query=select role from user where username=?
 
