Fix bugs in the services related to Ordering

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-logging.level.root = error
-
+logging.level.root=error
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/tasty_food_webapp
 spring.datasource.username=root
 spring.datasource.password=1234
+
+#spring.datasource.initialize=false
+
+#spring.jpa.defer-datasource-initialization=true
 
 spring.admin.username=admin
 spring.admin.password=admin
@@ -19,13 +22,10 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates
 
 javax.persistence.schema-generation.scripts.action
-
 javax.persistence.schema-generation.scripts.create-target
 javax.persistence.schema-generation.scripts.drop-target
-
 javax.persistence.schema-generation.create-source=metadata
 javax.persistence.schema-generation.drop-source=metadata
-
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
