--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ logging.level.root=error
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/tasty_food_webapp
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/tasty_food_webapp}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
 
 #spring.datasource.initialize=false
 
